# scoreboard

./: Cargo.toml  espflash.toml  sdkconfig.defaults
src/: main.rs
