[package]
name = "scoreboard"
version = "0.1.0"
authors = ["Piotr Płaczek <piotrpdev@gmail.com>"]
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "scoreboard"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
anyhow = "1.0.100"
embedded-graphics = "0.8.1"
st7735-lcd = "0.10.0"

[build-dependencies]
embuild = "0.33"
